chore: split the app.ts and server.ts for local dev and cloud

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build": "prisma generate"
   },
   "keywords": [],
   "author": "Yasir Naseem",
